fixed contrast issue

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -21,7 +21,7 @@ header li, header h1, header nav{
 a {
     text-decoration: none;
     color: white;
-    font-weight: 400;
+    font-weight: 600;
 }
 
 h1 {
